# epub_reader_backend

./: .gitignore  LICENSE  README.md  backend.py  config.py  prompt.txt  pyproject.toml  requirements.txt  run.bash
app/: __init__.py
app/middleware/: request_logger.py
app/routes/: analysis.py  health.py  stats.py
app/services/: ai_service.py  health_monitor.py  japanese_word_parser.py  text_analyzer.py  verb_conjugator.py  word_parser.py
app/utils/: language_detector.py  logger.py
backup/: ai_service.py  text_epub.py
