[project]
name = "epub-reader-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "psutil (>=7.1.3,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
