[tool.poetry]
name = "epub-reader-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.2"
flask-cors = "^6.0.1"
requests = "^2.32.5"
psutil = "^7.1.3"
dotenv = "^0.9.9"
openai = "^2.8.0"
jamdict = "^0.1a11.post2"
jamdict-data = "^1.5"
sudachipy = "^0.6.8"
sudachidict-core = "^20230927"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"